# semantic-selector-prototype

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: criteria.example.yaml  extractors.example.yaml  ranking.example.yaml  sources.demo.yaml  sources.example.yaml  sources.obo-foundry.example.yaml  sources.ontochoice-test.yaml
data/fixtures/: demo-one.ttl  demo-two.ttl  malformed.ttl  shared-term-a.ttl  shared-term-b.ttl
docs/: api-examples.md  architecture.md  criterion-registry.md  database.md  extractor-library.md  workflow.md
migrations/: 001_initial.sql  002_ontochoice_criteria.sql
scripts/: download_obo_foundry_ontologies.sh
src/semantic_selector/: __init__.py  cli.py  models.py  services.py  settings.py
src/semantic_selector/api/: app.py  dependencies.py  schemas.py
src/semantic_selector/criteria/: __init__.py  enforced.py  registry.py
src/semantic_selector/db/: connection.py  queries.py  schema.py  writer.py
src/semantic_selector/evaluators/: base.py  hierarchy.py  i18n.py  metadata.py  registry.py  reuse.py  term_annotations.py
src/semantic_selector/extractors/: base.py  normalization.py  registry.py
src/semantic_selector/index_build/: post_index.py  progress.py
src/semantic_selector/ingestion/: bioportal.py  local_files.py  parser.py  provenance.py  sources.py
tests/: conftest.py  test_api.py  test_evaluators.py  test_extractors.py  test_index_build.py  test_mcp.py  test_mondo_search.py  test_ontochoice_criteria.py  test_parser.py  test_ranking.py  test_rdf_backends.py  test_search.py  test_term_match.py
(+28 files in other folders)
