[project]
name = "semantic-selector-mvp"
version = "0.1.0"
description = "Local-first Semantic Selector MVP with SPARQL extractors and SQLite/FTS5 index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rdflib>=7.1,<8",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "typer>=0.15,<1",
  "mcp[cli]>=1,<2",
  "pyyaml>=6,<7",
  "pyoxigraph>=0.5.8",
]

[project.scripts]
semantic-selector = "semantic_selector.cli:app"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
  "httpx>=0.28,<1",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_selector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
